# p

./: 0_VRDemoSettings.txt  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  control.h  control_joint.cpp  control_pegin.cpp  control_sliding.cpp  control_turnover.cpp  inertia.py  kyomath.cpp  kyomath.h  mymod.cpp  nn_interface.cpp  nn_interface.h  nn_interface.py  pancake.cpp  pancake.h  practice.py  robot.cpp  robot.h
CSV/: 3d.py  DATA.csv  conv0.eps  conv5.eps  conv5N.eps  draw_fz.eps  draw_sim_x.eps  graph.py  graph_adm.py  graph_f.py  graph_force.py  graph_fz.py  graph_pos.py  log_joint.csv  pegin_fx.eps  pegin_fz.eps  pegin_z.eps  sample.py  stiff_relust_paper_pybullet.eps
CSV/nazori/: draw_fx.eps  draw_fz.eps  draw_x.eps  draw_z.eps  graph_fy.py  graph_fz.py  graph_x.py  graph_z.py  pegin_z.eps  stiff_relust_paper_pybullet.eps
CSV/peginpaper/: draw_fz.eps  draw_z.eps  graph_fy.py  graph_fz.py  graph_x.py  graph_z.py  pegin_fx.eps
CSV/pegin誤差20mm/: graph_fz.py  pegin_fx.eps  pegin_fz.eps  pegin_x.eps  pegin_z.eps  stiff_relust_paper_pybullet.eps
CSV/pegin誤差20mm/pegin_IROS/: graph_fy.py  graph_x.py  graph_z.py  log_turnover.csv
CSV/pegin誤差１５mm/: log_turnover.csv  stiff_peg-in.eps
CSV/実験データ/conv速さ2倍/: graph_x.py  graph_z.py  (+2 more)
URDF/: carpet.urdf  hol0e.stl  hole.stl  hole111.stl  hole2.stl  hole22.stl  hole4.stl  hole_10cm.stl  hole_2cm.stl  hole_pole.stl  jogi.stl  jogi2.stl  maru.stl  motoman-mh3f.urdf  pancake.urdf  samurai.urdf  samurai_hole.urdf  stltest.urdf
result/: model_LSTM999.npz
z_x剛性楕円/: control_turnover (コピー).cpp
(+25 files in other folders)
